--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.7.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation fileTree(dir: "acs", include: ["*.jar"])
+    implementation fileTree(dir: "libs", include: ["*.jar"])
 }
